--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-mongo-sanitize": "^2.2.0",
@@ -20,9 +21,10 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.3.6",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4",
+    "multer": "^1.3.0",
     "multer-gridfs-storage": "^5.0.2",
     "node-cron": "^3.0.0",
+    "nodemon": "^1.3.3",
     "xss-clean": "^0.1.1"
   }
 }
