--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gridfs-stream": "^1.1.1",
     "helmet": "^5.1.0",
     "method-override": "^3.0.0",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.6",
     "morgan": "^1.10.0",
     "multer": "^1.3.0",
